test/fails/bad_generics/basics7.lgl
int f<`u>(`t x) {  // Can't use a generic that hasn't been declared
    return 1;
}

void main() {
    print 1;
}